# chart_downloader

./: .gitignore  Dockerfile  README.md  docker_run.sh  entrypoint.sh  main.py  pyproject.toml  requirements.txt  startup_script.txt  update_checker.sh
.github/workflows/: update-checker.yml
