[tool.poetry]
name = "chart_downloader"
version = "0.1.0"
description = ""
authors = ["ababa831 <flvonlineconverter@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
asn1crypto = "0.24.0"
async-timeout = "4.0.1"
asynctest = "0.13.0"
attrs = "21.2.0"
black = "21.11b1"
certifi = "2021.10.8"
charset-normalizer = "2.0.8"
click = "8.0.3"
cryptography = "2.1.4"
cycler = "0.11.0"
decorator = "5.1.0"
frozenlist = "1.2.0"
idna = "2.6"
idna_ssl = "1.1.0"
importlib-metadata = "4.8.2"
japanize-matplotlib = "1.1.3"
joblib = "1.1.0"
keyring = "10.6.0"
"keyrings.alt" = "3.0"
kiwisolver = "1.3.1"
lxml = "4.6.5"
matplotlib = "3.3.4"
multidict = "5.2.0"
mypy-extensions = "0.4.3"
nest-asyncio = "1.5.1"
numpy = "1.19.5"
pandas = "1.1.5"
pandas-datareader = "0.10.0"
pathspec = "0.9.0"
Pillow = "8.4.0"
platformdirs = "2.4.0"
py = "1.11.0"
pycrypto = "2.6.1"
pyparsing = "3.0.6"
python-dateutil = "2.8.2"
python-dotenv = "0.19.2"
pytz = "2021.3"
pyxdg = "0.25"
regex = "2021.11.10"
requests = "2.26.0"
retry = "0.9.2"
schedule = "1.1.0"
SecretStorage = "2.3.1"
six = "1.11.0"
slack-logger = "0.3.1"
slackclient = "2.9.3"
tomli = "1.2.2"
tqdm = "4.62.3"
typed-ast = "1.5.0"
typing-extensions = "4.0.0"
xlrd = "2.0.1"
yahoo-earnings-calendar = "0.6.0"
yarl = "1.7.2"
zipp = "3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
